--- a/src/exercises/components/header/styles.module.css
+++ b/src/exercises/components/header/styles.module.css
@@ -1,11 +1,4 @@
 .Header {
-	display: flex;
-	justify-content: center;
-	background-color: red;
+	background-color: grey;
 	height: 10vh;
-}
-
-.Nav {
-	font-size: 20px;
-	text-decoration: none;
 }
