--- a/src/exercises/components/Button/styles.module.css
+++ b/src/exercises/components/Button/styles.module.css
@@ -1,10 +1,11 @@
-.Button {
+/* .Button {
 	width: 100px;
 	height: 50px;
 	border: rgb(8, 2, 2) solid 1px;
 	border-radius: 20px;
+	background: yellow;
 }
 
 .Button:hover {
 	background: white;
-}
+} */
